# opengl_basics

./: CMakeLists.txt
src/: main.cpp  math3d.hpp  renderer.hpp  triangle.hpp
